# switcher

./: .gitignore  CMakeLists.txt  README.md  build.cmd  build.sh  build_conan.cmd  conan.cmd  conanfile.txt  deploy_linux.sh.in  logging_categories.cpp  logging_categories.h  main.cpp  settings.h  settings_dialog.cpp  settings_dialog.h  settings_dialog.ui  ssh.txt  switcher.cpp  switcher.h  switcher.qrc  tray.cpp  tray.h  windeploy_debug.cmd  windeploy_release.cmd
